--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -45,3 +45,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="questions-view/questions-view.html">
 <link rel="import" href="questions-data/questions-data.html">
 <link rel="import" href="user-profile/user-profile.html">
+<link rel="import" href="questions-menu/questions-menu.html">
