removed unused attributes

--- a/app/index.html
+++ b/app/index.html
@@ -89,8 +89,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </paper-toolbar>
 
         <!-- Drawer Content -->
-        <questions-menu user="{{user}}"
-                        is-admin="{{isAdmin}}"
+        <questions-menu is-admin="{{isAdmin}}"
                         base-url="{{baseUrl}}"
                         route="[[route]]">
         </questions-menu>
