fix some lint errors

--- a/app/elements/app-login/app-login.html
+++ b/app/elements/app-login/app-login.html
@@ -116,7 +116,7 @@
         this.adminsLocation = location + '/admins';
       },
 
-      _checkAdmin: function(e) {
+      _checkAdmin: function() {
         if (this.user && this.admins) {
           this.isAdmin = false;
           for (var key in this.admins) {
