--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         <!-- Drawer Content -->
         <questions-menu is-admin="{{isAdmin}}"
+                        user="{{user}}"
                         base-url="{{baseUrl}}"
                         route="[[route]]">
         </questions-menu>
